--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <link>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="google667cfa399f6c18dd" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -42,7 +43,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-   
+
  <script src="https://unpkg.com/boxicons@2.0.8/dist/boxicons.js"></script>
   </body>
 </html>
